Fix for highlight title not wrapping to 2 lines
close #94

--- a/sites/all/themes/cas/sass/_front.scss
+++ b/sites/all/themes/cas/sass/_front.scss
@@ -298,6 +298,7 @@
 		background:url(../images/icon-highlight.png) no-repeat left center;
 		display:inline-block;
 		text-shadow:-3px 3px 3px rgba(0,0,0,0.2);
+		max-width:350px;
 	}
 
 	.view-highlight
